# fluxid

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: local-deployment.md  us-market-live-feed-lld.md
src/fluxid/: alpaca_client.py  config.py  main.py  market.py  neo_client.py  service.py
src/fluxid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fluxid/templates/: dashboard.html  opening_bar.html  option_chain.html
tests/: test_alpaca_client.py  test_market.py  test_neo_client.py  test_opening_bar.py  test_regional_feed.py  test_service.py  test_template_smoke.py
